running test step on pre-build docker image

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,6 +5,6 @@ steps:
       - make lint
       - make test
     plugins:
-      - docker-compose#v3.1.0:
-          run: test
-          config: .buildkite/docker-compose.yml
+      - docker#v3.3.0:
+          image: indebted-test
+          network: indebted-net
