--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,11 +1,8 @@
 steps:
-  - name: test
+  - name: lint && test
     command:
-      - make go-mod-verify
-      - make check-fmt
-      - make lint
-      - make test
+      - mmake lint
+      - mmake test
     plugins:
-      - docker#v3.3.0:
-          image: indebted-test
-          network: indebted-net
+      - docker-compose#v3.1.0:
+          run: dev
